<resources>
    <string name="app_name">Spondok</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_streaming">Streaming</string>
    <string name="title_notifications">Order</string>
    <string name="title_about">About</string>
    <string name="title_profile">Profile</string>
    <string name="title_message">Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">No Item</string>

    <string name="app_bar_name">SPONDOK</string>
    <string name="msg_text">Kirim Feedback anda untuk mendukung dan membantu aplikasi kami menjadi lebih baik</string>
    <string name="msg_title">KOTAK SARAN</string>
    <string name="send">KIRIM</string>
    <string name="title_activity_streaming">StreamingActivity</string>
    <string name="action_settings">Settings</string>

    <string name="format">%1$d + %2$d = %3$d</string>

    <string name="status_on">Kancanta Streaming : <b>ON</b>; Program:<b><i>-</i></b>; Durasi:<b><i>-</i></b></string>
    <string name="status_off">Kancanta Streaming : <b>OFF</b>; Program:<b><i>-</i></b>; Durasi:<b><i>-</i></b></string>

    <array name="departments">
        <item>Technical</item>
        <item>Support</item>
        <item>Research and Development</item>
        <item>Marketing</item>
        <item>Human Resource</item>
    </array>

    <array name="program">
        <item>Intips</item>
        <item>Galeri Siang</item>
        <item>Kancanta Hari ini</item>
        <item>Budaya Batur Sasak (BBS)</item>
        <item>Indie Kancanta</item>
        <item>Wajah Pariwisata</item>
        <item>Budaya Batur Sasak (BBS)</item>
        <item>Indie Kancanta</item>
        <item>Wajah Pariwisata</item>
        <item>Wajah Pariwisata</item>
        <item>Budaya Batur Sasak (BBS)</item>
        <item>Indie Kancanta</item>
        <item>Wajah Pariwisata</item>
    </array>

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Fruits</item>
        <item>Vegitables</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_basket</item>
    </array>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>


    <string name="title_activity_iklan">IklanActivity</string>
    <string name="title_activity_lagu">LaguActivity</string>
    <string name="title_activity_aktivitas">AktivitasActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_ads">AdsActivity</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_banner">BannerActivity</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_id">ca-app-pub-6121010286485686/1609579230</string>
    <string name="ads_list">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_profile_wali">ProfileWali</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_pembayaran_spp">PembayaranSPP</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>
