<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_home" />

    <item
        android:id="@+id/action_notif"
        android:icon="@drawable/ic_notifications_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/action_message"
        android:icon="@drawable/ic_chat_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_message" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/title_profile" />




</menu>
